<resources>
    <string name="app_name">Gourmand</string>
    <string name="hint_caption">Write your caption</string>
    <string name="select_location">Select Location</string>
    <string name="search_friend">Friend username</string>
    <string name="location_name">Location Name</string>
    <string name="following">Followings</string>
    <string name="follower">Followers</string>
    <string name="title_activity_maps">Map</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="aticfox">Aticfox</string>

    <string-array name="user_names">
        <item>"Linda"</item>
        <item>"Susan"</item>
        <item>"Lisa"</item>
        <item>"Betty"</item>
        <item>"Helen"</item>
        <item>"Laura"</item>
        <item>"Anna"</item>
        <item>"Jessica"</item>
        <item>"Christine"</item>
        <item>"Alice"</item>
        <item>"Katherine"</item>
    </string-array>

    <string-array name="location_names">
        <item>"Central Westgate"</item>
        <item>"Silpakorn University"</item>
        <item>"Maria Pizzeria Restaurant"</item>
        <item>"ร้านอาหารบ้านป้าแจ๋ว"</item>
        <item>"ภัตตาคารอาหารญี่ปุ่นฟูจิ"</item>
        <item>"สวนอาหารนัดพบ"</item>
        <item>"ร้านอาหาร บ้านพริกสวน"</item>
        <item>"หนานกุอาหารเหนือ"</item>
        <item>"บ้านเอกเขนก"</item>
    </string-array>

</resources>
